--- a/domain.yml
+++ b/domain.yml
@@ -70,55 +70,55 @@ slots:
 
 responses:
   utter_weather_exception:
-  - text: 非常抱歉，未查询到该城市的天气状况
+  - text: <div class='msg-text'>非常抱歉，未查询到该城市的天气状况</div>
   utter_contact_human:
-  - text: 暂时还没有人工服务哦~
+  - text: <div class='msg-text'>暂时还没有人工服务哦~</div>
   utter_greet:
-  - text: 您好！请问有什么可以帮到您？
+  - text: <div class='msg-text'>您好！请问有什么可以帮到您？</div>
   utter_anything_else:
-  - text: 还有什么我可以帮你的吗？
+  - text: <div class='msg-text'>还有什么我可以帮你的吗？</div>
   utter_bye:
-  - text: 拜拜!
-  - text: Bye!
-  - text: 再见
-  - text: 再见，很高兴与您交谈！
-  - text: Bye bye!
+  - text: <div class='msg-text'>拜拜!</div>
+  - text: <div class='msg-text'>Bye!</div>
+  - text: <div class='msg-text'>再见</div>
+  - text: <div class='msg-text'>再见，很高兴与您交谈！</div>
+  - text: <div class='msg-text'>Bye bye!</div>
   utter_canthelp:
-  - text: 很抱歉没能帮到你。
+  - text: <div class='msg-text'>很抱歉没能帮到你。</div>
   utter_stilldontunderstand:
-  - text: 我还是不太明白，很抱歉没能帮到你。
+  - text: <div class='msg-text'>我还是不太明白，很抱歉没能帮到你。</div>
   utter_default:
-  - text: 对不起，我没听懂🤷。你可以再具体点吗？
-  - text: 没看懂，能具体点吗？
-  - text: 对不起，我没听懂你的意思。可以再具体点吗？
-  - text: 我不太明白，你可以再具体点吗？
+  - text: <div class='msg-text'>对不起，我没听懂🤷。你可以再具体点吗？</div>
+  - text: <div class='msg-text'>没看懂，能具体点吗？</div>
+  - text: <div class='msg-text'>对不起，我没听懂你的意思。可以再具体点吗？</div>
+  - text: <div class='msg-text'>我不太明白，你可以再具体点吗？</div>
   utter_greet_noname:
-  - text: 嗨!
-  - text: 你好!
-  - text: 嘿!
+  - text: <div class='msg-text'>嗨!</div>
+  - text: <div class='msg-text'>你好!</div>
+  - text: <div class='msg-text'>嘿!</div>
   utter_inform_privacypolicy:
-  - text: 与我聊天即表示您同意我们的[隐私政策](https://rasa.com/privacy-policy/)。
+  - text: <div class='msg-text'>与我聊天即表示您同意我们的<a class='response-inner-text-a' href='https://rasa.com/privacy-policy/' target='_blank'>隐私政策</a>。</div>
   utter_nohelp:
-  - text: 目前我能做的就是这些。如果您对我应该学习的内容有任何建议，请告诉我！
+  - text: <div class='msg-text'>目前我能做的就是这些。如果您对我应该学习的内容有任何建议，请告诉我！</div>
   utter_noworries:
-  - text: 别客气！
-  - text: 我很乐意提供帮助。
+  - text: <div class='msg-text'>别客气！</div>
+  - text: <div class='msg-text'>我很乐意提供帮助。</div>
   utter_react_negative:
-  - text: 😕
-  - text: 😞
-  - text: 😥
-  - text: 😢
+  - text: <div class='msg-text'>😕</div>
+  - text: <div class='msg-text'>😞</div>
+  - text: <div class='msg-text'>😥</div>
+  - text: <div class='msg-text'>😢</div>
   utter_react_positive:
-  - text: 😄
-  - text: 😊
-  - text: 👏
-  - text: 😍
+  - text: <div class='msg-text'>😄</div>
+  - text: <div class='msg-text'>😊</div>
+  - text: <div class='msg-text'>👏</div>
+  - text: <div class='msg-text'>😍</div>
   utter_thumbsup:
-  - text: 好的
+  - text: <div class='msg-text'>好的</div>
   utter_what_help:
-  - text: 好的，我有什么可以帮你的？
+  - text: <div class='msg-text'>好的，我有什么可以帮你的？</div>
   utter_ask_rephrase:
-  - text: 我不太明白，你可以描述得更具体点吗？
+  - text: <div class='msg-text'>我不太明白，你可以描述得更具体点吗？</div>
 actions:
 - action_trigger_response_selector
 - action_default_ask_affirmation
