1. 如果接收的是“/XX/XX”类似的意图消息，直接utter_/XX/XX 2. fallback后不再支持FAQ了（后续改进） 3. document ES不再索引content，添加日期，并将近期文章推荐靠前

--- a/data/nlu/dormitory.yml
+++ b/data/nlu/dormitory.yml
@@ -10,6 +10,7 @@ nlu:
       - 跨校区调宿
       - 退宿
       - 怎么退宿？
+      - 怎么退宿
       - 休学退宿
       - 关于第二批毕业生退宿的疑问
       - 换宿舍
@@ -35,8 +36,9 @@ nlu:
       - 调宿问题
       - 调宿系统在哪里
       - 调宿申请入口
-      - 换宿舍
+      - 怎么换宿舍
       - 请问如何换宿舍呢？
+      - 如何换宿舍
 
   - intent: 宿舍服务/电费查询与充值
     examples: |
